Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_wa-test-01.yml
+++ b/.github/workflows/main_wa-test-01.yml
@@ -49,7 +49,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -60,10 +62,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D7F164A1BF9D415BA113BD79BE623802 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B101FE36F7B247CD8A4203FF783648C3 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DF82091252114163A74EE48CED94B9BD }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'WA-Test-01'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D92BCF9E5CBF4BCE9DEA7E18EE1DFAD0 }}
+          
