--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Django==4.2.3
+Django==4.2.3  # Specify your Django version
+mysqlclient  # Or use PyMySQL if you prefer
+
 anyio==4.6.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
