--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
 backports.tarfile==1.2.0
 django==4.2.16
+backports.tarfile==1.2.0
+django==4.2.16
 fqdn==1.5.1
 gunicorn==20.1.0
 importlib-metadata==8.0.0
 importlib-resources==6.4.0
+importlib-metadata==8.0.0
+importlib-resources==6.4.0
 isoduration==20.11.0
+jaraco.collections==5.1.0
 jaraco.collections==5.1.0
 jsonpointer==3.0.0
 jupyterlab==4.2.5
 jupyterlab-git==0.50.1
+jupyterlab-git==0.50.1
 mysqlclient==2.2.5
+pip-chill==1.0.3
 pip-chill==1.0.3
 plotly==5.24.1
 psycopg2==2.9.10
 python-dotenv==1.0.1
 scikit-learn==1.5.2
 seaborn==0.13.2
+tomli==2.0.1
 tomli==2.0.1
 torch==2.4.1+cpu
 uri-template==1.3.0
