--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ scikit-learn==1.5.2
 seaborn==0.13.2
 tomli==2.0.1
 tomli==2.0.1
-torch==2.4.1+cpu
+torch==2.4.1
 uri-template==1.3.0
 webcolors==24.8.0
 whitenoise==6.7.0
